Refactor size information to be part of DrawContext